--- a/app/view/allg/filesystem/treeedit.html
+++ b/app/view/allg/filesystem/treeedit.html
@@ -1,3 +1,5 @@
+<input id="rootInput" type="hidden">
+<input id="rootoldInput" type="hidden">
 <input id="dirInput" type="hidden">
 <div class="inputarea">
   <div class="inputgroup">
