Videos hinzugefügt, mimetype vom Server

--- a/app/view/dbadmin/weblet/subwebletdetail.html
+++ b/app/view/dbadmin/weblet/subwebletdetail.html
@@ -1,7 +1,8 @@
-<input type="hidden" id="htmlcomposeidInput"/>
 <input type="hidden" id="htmlcomposetabidInput"/>
+<input type="hidden" id="htmlcomposeidInput"/>
 <div class="inputarea">
   <div class="inputgroup">
+    <div class=inputsingle><span id="nameLabel"></span><span id="nameOutput"></span></div>
     <div class=inputsingle><span id="idLabel"></span><input type="text" id="idInput"/></div>
     <div class=inputsingle><span class="label" id="customLabel"></span><input id="customInput" type="checkbox"/></div>
     <div class=inputsingle><span id="ugroupLabel"></span><input type="text" id="ugroupInput"/></div>
