--- a/app/view/allg/etc/color.html
+++ b/app/view/allg/etc/color.html
@@ -1,6 +1,6 @@
 <table class='colorselect'>
   <tr>
-    <td class="top"><span id="colorOutput" class="colorselectoutput"></span></td>
+    <td class="top"><input id="colorInput" class="colorselectoutput"></input></td>
     <td class="top"><div id="contentTable" class="colorselecttable"></div></td>
   </tr>
 </table>
