kleine Bugfixes, Warnungen beseitigt

--- a/app/view/dbadmin/procedure/detail.html
+++ b/app/view/dbadmin/procedure/detail.html
@@ -1,6 +1,7 @@
 <input type="hidden" id='specific_nameInput'/>
 <input type="hidden" id='ownernameInput'/>
 <input type="hidden" id='idInput'/>
+<input type="hidden" id='idnameInput'/>
 <span id="textInput" class="hidden ele-wrapper" data-hidden=true aria-multiline=true></span>
 <div class="inputarea fullheight">
   <div class="inputgroup">
