--- a/app/index.tmpl
+++ b/app/index.tmpl
@@ -14,7 +14,7 @@
 
 <script type="text/javascript">
   window.mne_application = '####Appl####';
-  window.mne_title = 'ERP - Nelson technische Informatik';
+  window.mne_title = '####Appl####'.toUpperCase() + ' - Nelson technische Informatik';
 </script>
 <script type="module" src='winload.mjs' crossorigin="use-credentials"></script>
 <body><div id="mainwindow"></div></body>
